private router, header, menu

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,5 @@
 SKIP_PREFLIGHT_CHECK=true
+
+REACT_APP_GOOGLE_CLIENT_ID = 251967640945-j403u93tmlh7m1l70476vbomfuhkp18g.apps.googleusercontent.com
+  
+# REACT_APP_GOOGLE_SECRET_CLIENT_ID=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
