--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,10 +4,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-oauth/google": "^0.2.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.21.1",
+    "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
     "peerjs": "^1.3.2",
     "react": "^17.0.1",
