--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "",
+  "name": "onstagram",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js",
-    "server": "node server.js",
-    "client": "cd client && npm run start",
+    "start": "node server.js",
+    "server": "nodemon server.js",
+    "client": "cd frontend && npm run start",
     "server-install": "npm install",
-    "client-install": "cd client && npm install",
+    "client-install": "cd frontend && npm install",
     "install-all": "concurrently \"npm run server-install\" \"npm run client-install\" ",
     "dev": "concurrently \"npm run server\" \"npm run client\" ",
-    "heroku-postbuild": "cd client && npm install && npm run build"
+    "heroku-postbuild": "cd frontend && npm install && npm run build"
   },
   "author": "",
   "license": "ISC",
