--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.21.1",
+    "emoji-picker-react": "^4.1.1",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
     "peerjs": "^1.3.2",
